--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -13,7 +13,6 @@ build/
 *.iml
 modules.xml
 *.ipr
-.idea
 
 ### STS ###
 .apt_generated
@@ -44,3 +43,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+.idea/*
+!.idea/runConfigurations
+!.idea/runConfigurations/*.xml
+!.idea/codeStyles
+!.idea/codeStyles/*.xml
