feat: Add TrackWeatherController and Service

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,3 +13,5 @@ spring:
       username: ${MONGODB_USERNAME}
       password: ${MONGODB_PASSWORD}
       database: ${MONGODB_DATABASE}
+app:
+  weather-api-key: ${WEATHER_API_KEY}
