--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,7 @@
 SERVER_PORT=8080
+FRONTEND_BASE_URL=http://localhost:3000
+MONGODB_HOST=localhost
+MONGODB_USERNAME=myuser
+MONGODB_PASSWORD=mypassword
+MONGODB_DATABASE=mydatabase
+WEATHER_API_KEY=yourapikey
